--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Scroll Animation</title>
 </head>
 <body>
@@ -12,7 +12,7 @@
         <div class="box-1">
             <div class="content">
                 <div class="c c1">
-                    <img src="/ScrollAnimation Task Assets/world-communication-awards-for-best-digital-experience.png" />
+                    <img src="./ScrollAnimation Task Assets/world-communication-awards-for-best-digital-experience.png" />
                     <h1>ABC 123</h1>
                     <p>We are the best web development company in the world.</p>
                 </div>
@@ -50,7 +50,7 @@
                 </div>
                 <div class="content">
                     <div class="c c7">
-                        <img src="/ScrollAnimation Task Assets/mobile-app-of-the-year-by-entrepreneur.png" />
+                        <img src="./ScrollAnimation Task Assets/mobile-app-of-the-year-by-entrepreneur.png" />
                         <h1>ABC 23478</h1>
                         <p>We are the best web development company in the world.</p>
                     </div>
@@ -78,7 +78,7 @@
                 <div class="title">
                     <div class="t t3">
                     <p style="text-align: left;">Powered by advance</p>
-                    <img src="/ScrollAnimation Task Assets/nasa-mobile-app.png" />
+                    <img src="./ScrollAnimation Task Assets/nasa-mobile-app.png" />
                     <p>algorithms</p>
                     </div>
                 </div>
@@ -205,77 +205,43 @@
         </div>
         <div class="box-2">
             <div class="panel p1">
-                <img class="page2 p1-itm1" src="/ScrollAnimation Task Assets/nexgtv-entertainment-mobile-app-development.png" />
-                <img class="page2 p1-itm2" src="/ScrollAnimation Task Assets/nexgtv-mobile-app-ui-design.png" />
+                <img class="page2 p1-itm1" src="./ScrollAnimation Task Assets/nexgtv-entertainment-mobile-app-development.png" />
+                <img class="page2 p1-itm2" src="./ScrollAnimation Task Assets/nexgtv-mobile-app-ui-design.png" />
                 </div>
                 <div class="panel p2">
-                    <img class="page2 p2-itm1" src="/ScrollAnimation Task Assets/veme-blockchain-app-developed.png" />
-                    <img class="page2 p2-itm2" src="/ScrollAnimation Task Assets/veme-app-ui-design.png" />
+                    <img class="page2 p2-itm1" src="./ScrollAnimation Task Assets/veme-blockchain-app-developed.png" />
+                    <img class="page2 p2-itm2" src="./ScrollAnimation Task Assets/veme-app-ui-design.png" />
                 </div>
                 <div class="panel p3">
-                    <img class="page2 p3-itm1" src="/ScrollAnimation Task Assets/nasa-fitness-tracking-mobile-app.png" />
-                    <img class="page2 p3-itm2" src="/ScrollAnimation Task Assets/measure-total-body-weight-through-fitness-app.png" />
+                    <img class="page2 p3-itm1" src="./ScrollAnimation Task Assets/nasa-fitness-tracking-mobile-app.png" />
+                    <img class="page2 p3-itm2" src="./ScrollAnimation Task Assets/measure-total-body-weight-through-fitness-app.png" />
                 </div>
                 <div class="panel p4">
-                    <img class="page2 p4-itm1" src="/ScrollAnimation Task Assets/domi-img1.png" />
-                    <img class="page2 p4-itm2" src="/ScrollAnimation Task Assets/ux-strategy-for-mobile-app-devlopment.png" />
-                    <img class="p4-itm3" src="/ScrollAnimation Task Assets/pizza_box.png"/>
-                    <img class="p4-itm4" src="/ScrollAnimation Task Assets/dominos-bread.png"/>
-                    <img class="p4-itm5" src="/ScrollAnimation Task Assets/dominos-bread1.png"/>
+                    <img class="page2 p4-itm1" src="./ScrollAnimation Task Assets/domi-img1.png" />
+                    <img class="page2 p4-itm2" src="./ScrollAnimation Task Assets/ux-strategy-for-mobile-app-devlopment.png" />
+                    <img class="p4-itm3" src="./ScrollAnimation Task Assets/pizza_box.png"/>
+                    <img class="p4-itm4" src="./ScrollAnimation Task Assets/dominos-bread.png"/>
+                    <img class="p4-itm5" src="./ScrollAnimation Task Assets/dominos-bread1.png"/>
                 </div>
                 <div class="panel p5">
-                    <img class="page2 p5-itm1" src="/ScrollAnimation Task Assets/karavan-social-networking-app-screen.png" />
-                    <img class="page2 p5-itm2" src="/ScrollAnimation Task Assets/karavan_2.png" />
-                    <img class="page2 p5-itm3" src="/ScrollAnimation Task Assets/social-networking-app-case-study.png" />
-                    <img class="page2 p5-itm4" src="/ScrollAnimation Task Assets/karavan-social-networking-app-screen-2.png" />
-                    <img class="page2 p5-itm5" src="/ScrollAnimation Task Assets/developers-for-social-media-app.png" />
+                    <img class="page2 p5-itm1" src="./ScrollAnimation Task Assets/karavan-social-networking-app-screen.png" />
+                    <img class="page2 p5-itm2" src="./ScrollAnimation Task Assets/karavan_2.png" />
+                    <img class="page2 p5-itm3" src="./ScrollAnimation Task Assets/social-networking-app-case-study.png" />
+                    <img class="page2 p5-itm4" src="./ScrollAnimation Task Assets/karavan-social-networking-app-screen-2.png" />
+                    <img class="page2 p5-itm5" src="./ScrollAnimation Task Assets/developers-for-social-media-app.png" />
                 </div>
                 <div class="panel p6">
-                    <img class="page2 p6-itm1" src="/ScrollAnimation Task Assets/erp-app-development-service.png" />
+                    <img class="page2 p6-itm1" src="./ScrollAnimation Task Assets/erp-app-development-service.png" />
                 </div>
                 <div class="panel p7">
-                    <img class="page2 p7-itm1" src="/ScrollAnimation Task Assets/melltoo-img2.png" />
-                    <img class="page2 p7-itm2" src="/ScrollAnimation Task Assets/melltoo-img1.png" />
+                    <img class="page2 p7-itm1" src="./ScrollAnimation Task Assets/melltoo-img2.png" />
+                    <img class="page2 p7-itm2" src="./ScrollAnimation Task Assets/melltoo-img1.png" />
                 </div>
             
-
-
-            <!-- <div class="p p1">
-            <img class="page1 page1-itm1" src="/ScrollAnimation Task Assets/nexgtv-entertainment-mobile-app-development.png" />
-            <img class="page1 page1-itm2" src="/ScrollAnimation Task Assets/nexgtv-mobile-app-ui-design.png" />
-            </div>
-            <div class="p p2">
-                <img class="page2 page2-itm1" src="/ScrollAnimation Task Assets/nexgtv-entertainment-mobile-app-development.png" />
-                <img class="page2 page2-itm2" src="/ScrollAnimation Task Assets/nexgtv-mobile-app-ui-design.png" />
-            </div>
-            <div class="p p3">
-                <img class="page2 page2-itm1" src="/ScrollAnimation Task Assets/nexgtv-entertainment-mobile-app-development.png" />
-                <img class="page2 page2-itm2" src="/ScrollAnimation Task Assets/nexgtv-mobile-app-ui-design.png" />
-            </div>
-            <div class="p p4">
-                <img class="page2 page2-itm1" src="/ScrollAnimation Task Assets/nexgtv-entertainment-mobile-app-development.png" />
-                <img class="page2 page2-itm2" src="/ScrollAnimation Task Assets/nexgtv-mobile-app-ui-design.png" />
-            </div>
-            <div class="p p5">
-                <img class="page2 page2-itm1" src="/ScrollAnimation Task Assets/nexgtv-entertainment-mobile-app-development.png" />
-                <img class="page2 page2-itm2" src="/ScrollAnimation Task Assets/nexgtv-mobile-app-ui-design.png" />
-            </div>
-            <div class="p p6">
-                <img class="page2 page2-itm1" src="/ScrollAnimation Task Assets/nexgtv-entertainment-mobile-app-development.png" />
-                <img class="page2 page2-itm2" src="/ScrollAnimation Task Assets/nexgtv-mobile-app-ui-design.png" />
-            </div>
-            <div class="p p7">
-                <img class="page2 page2-itm1" src="/ScrollAnimation Task Assets/nexgtv-entertainment-mobile-app-development.png" />
-                <img class="page2 page2-itm2" src="/ScrollAnimation Task Assets/nexgtv-mobile-app-ui-design.png" />
-            </div>
-            <div class="p p8">
-                <img class="page2 page2-itm1" src="/ScrollAnimation Task Assets/nexgtv-entertainment-mobile-app-development.png" />
-                <img class="page2 page2-itm2" src="/ScrollAnimation Task Assets/nexgtv-mobile-app-ui-design.png" />
-            </div> -->
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.2/ScrollTrigger.min.js"></script>
-    <script src="/script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
